k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-risk-service
  labels:
    app: ml-risk-service
spec:
  selector:
    app: ml-risk-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
